tests/suite/fail/generated/borrow/fail_move_eat_text.ny
fn eat(x: string) -> void { print(x) }
fn main() {
    let text = "hello"
    eat(text)
    print(text) //~ ERROR was moved
}
